# OSPRNG

./: CMakeLists.txt  LICENSE  PRNG.hpp  README.md
Test/: CMakeLists.txt  test.cpp
